--- a/.github/workflows/ctest.yml
+++ b/.github/workflows/ctest.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Run CMake configure (default)
       run: |
         cd build
-        cmake ..
+        cmake -DFIRESTARTER_BUILD_TESTS=ON ..
 
     - name: Build
       run: |
