--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,4 +84,6 @@ include(cmake/InstallGoogleTest.cmake)
 
 add_subdirectory(src)
 
-add_subdirectory(test)
+if(FIRESTARTER_BUILD_TESTS)
+	add_subdirectory(test)
+endif()
