revert linking non system dependecies static

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,10 @@ include(cmake/BuildSettings.cmake)
 
 include(cmake/DarwinBuild.cmake)
 
+if(NOT DEFINED ASMJIT_STATIC)
+       set(ASMJIT_STATIC TRUE)
+endif()
+
 add_subdirectory(lib/asmjit)
 add_subdirectory(lib/nitro)
 
