--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,6 +17,9 @@ on: [push, pull_request]
 # On MacOS:
 #   FIRESTARTER against XCode on MacOS 13
 
+# We further define jobs to test the compatibilty of the FIRESTARTER code against different linux distros:
+# - RHEL 9
+
 jobs:
 
   build-linux-hip-rocm:
@@ -39,7 +42,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: '0'
+        submodules: 'true'
     - name: Install HIP runtime (if needed)
       run: |
         case ${{ matrix.HIP }} in
@@ -91,7 +94,7 @@ jobs:
       matrix:
         os: [ubuntu-24.04]
         ONEAPI: ['2023.2.0', '2024.0']
-  
+
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -102,7 +105,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: '0'
+        submodules: 'true'
     - name: Install OneAPI Base-Toolkit
       run: |
         wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor | sudo tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
@@ -146,11 +149,11 @@ jobs:
         name: FIRESTARTER_ONEAPI_${{ matrix.ONEAPI }}-linux
         retention-days: 1
         path: build/src/FIRESTARTER_ONEAPI
-    
+
     - name: UnInstall OneAPI Base-Toolkit (if needed)
       run: |
         sudo apt remove intel-basekit-${{ matrix.ONEAPI }}
-        sudo apt autoremove      
+        sudo apt autoremove
 
 
   build-linux-cuda:
@@ -159,16 +162,16 @@ jobs:
       matrix:
         os: [ubuntu-24.04]
         CUDA: ['8.0', '11.0', 'NVHPC-22.5']
-  
+
     runs-on: ${{ matrix.os }}
-  
+
     env:
       CUDA_ROOT: '/usr/local/cuda'
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: '0'
+        submodules: 'true'
     - name: Install CUDA runtime
       run: |
         case ${{ matrix.CUDA }} in
@@ -208,7 +211,7 @@ jobs:
         export CUDA_HOME=${CUDA_ROOT}
         export CUDA_PATH=${CUDA_ROOT}
         export CUDAToolkit_ROOT=${CUDA_ROOT}
-  
+
         cd build
         cmake -DFIRESTARTER_BUILD_TESTS=ON -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}/lib64/stubs/" ..
     - name: Run CMake configure (CUDA with NVHPC)
@@ -219,7 +222,7 @@ jobs:
         LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/compilers/lib:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
         LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
         LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-  
+
         cd build
         cmake -DFIRESTARTER_BUILD_TESTS=ON -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs" -LA ..
     - name: Build (CUDA)
@@ -240,7 +243,38 @@ jobs:
       run: |
         sudo rm -rf ${CUDA_ROOT}
 
-      
+  build-linux-container:
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          - { image: redhat/ubi9 }
+
+    runs-on: ubuntu-latest
+    container:
+      image: ${{ matrix.image }}
+
+    steps:
+    - name: Install dependencies
+      run: |
+        dnf install cmake pkgconf gcc gcc-c++ glibc glibc-static libstdc++ libstdc++-static git -y
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        submodules: 'true'
+    - name: Create build directory
+      run: |
+        mkdir build
+    - name: Run CMake configure
+      run: |
+        cd build
+        cmake -DFIRESTARTER_BUILD_TESTS=ON ..
+    - name: Build (default)
+      run: |
+        cd build
+        make -j4
+
+
   build-linux:
     strategy:
       fail-fast: true
@@ -270,7 +304,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: '0'
+        submodules: 'true'
     - name: Create build directory
       run: |
         mkdir build
@@ -313,7 +347,7 @@ jobs:
       run: |
         sudo apt remove ${{ matrix.compiler }}
         sudo apt autoremove
-  
+
 
   build-windows:
     strategy:
@@ -330,7 +364,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: '0'
+        submodules: 'true'
     - name: Install Mingw
       uses: crazy-max/ghaction-chocolatey@v3
       if: matrix.cfg.MSVC == false
@@ -365,7 +399,7 @@ jobs:
       shell: pwsh
       run: |
         cd build
-        ls 
+        ls
         dir "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.0"
         cmake -DFIRESTARTER_BUILD_TESTS=ON -G "NMake Makefiles" -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCUDAToolkit_ROOT="C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0" ..
     - name: Build
@@ -416,7 +450,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: '0'
+        submodules: 'true'
     - name: Install Homebrew dependencies
       run: |
         brew upgrade cmake
@@ -454,7 +488,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: '0'
+        submodules: 'true'
         path: 'sources'
     - name: Checkout submodules
       run: |
@@ -464,7 +498,7 @@ jobs:
       run: |
         mkdir build
     # Linux
-    - name: Retrieve FIRESTARTER-linux 
+    - name: Retrieve FIRESTARTER-linux
       uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER-linux
@@ -475,7 +509,7 @@ jobs:
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER-linux
     # Linux CUDA 8.0
-    - name: Retrieve FIRESTARTER_CUDA_8.0-linux 
+    - name: Retrieve FIRESTARTER_CUDA_8.0-linux
       uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_CUDA_8.0-linux
@@ -486,7 +520,7 @@ jobs:
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER_CUDA_8.0
     # Linux CUDA 11.0
-    - name: Retrieve FIRESTARTER_CUDA_11.0-linux 
+    - name: Retrieve FIRESTARTER_CUDA_11.0-linux
       uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_CUDA_11.0-linux
@@ -497,7 +531,7 @@ jobs:
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER_CUDA_11.0
     # Linux CUDA HPC
-    - name: Retrieve FIRESTARTER_CUDA_NVHPC-22.5-linux 
+    - name: Retrieve FIRESTARTER_CUDA_NVHPC-22.5-linux
       uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_CUDA_NVHPC-22.5-linux
@@ -508,7 +542,7 @@ jobs:
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER_CUDA_NVHPC-22.5
     # Linux OneAPI
-    - name: Retrieve FIRESTARTER_ONEAPI_2024.0-linux 
+    - name: Retrieve FIRESTARTER_ONEAPI_2024.0-linux
       uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_ONEAPI_2024.0-linux
@@ -518,7 +552,7 @@ jobs:
         mv FIRESTARTER/FIRESTARTER_ONEAPI FIRESTARTER_ONEAPI_2024.0
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER_ONEAPI_2024.0
-    - name: Retrieve FIRESTARTER_ONEAPI_2023.2.0-linux 
+    - name: Retrieve FIRESTARTER_ONEAPI_2023.2.0-linux
       uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_ONEAPI_2023.2.0-linux
@@ -529,7 +563,7 @@ jobs:
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER_ONEAPI_2023.2.0
     # Linux HIP 6.3
-    - name: Retrieve FIRESTARTER_HIP_6.3-linux 
+    - name: Retrieve FIRESTARTER_HIP_6.3-linux
       uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_HIP_6.3-linux
